# yayska-backend

./: .coverage  .cursorrules  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_db.py  test_llm.py  vercel.json
.cursor/: rules
alembic/: env.py
alembic/versions/: 05552223099a_init_db.py  20241211_232813_05552223099a_init_db.py  20241211_232814_973d815d64dd_add_events.py  20241211_232815_d9603287d6c4_alter_concept_metadata.py  20241211_232816_84e48761155c_add_users_table.py  20250112_155103_acc90e9a87a1_improve_curriculum_structure.py  20250112_162656_632beec733a9_simplify_curriculum.py  20250309_130634_b90f7dfa16c2_add_monthly_curriculum_plans_table.py  20250322_200518_95bf81972bd6_update_users_table_for_oauth.py  20250323_195433_61644c38a317_add_token_blacklist_table.py  20250405_update_users_for_multi_provider.py  20250602_194808_094e4d72dbb1_add_ai_chat_structures.py  20250615_135537_efd0655774c6_improved_events.py  20250621_213907_e635c333e57e_ai_chat_feeback_cols.py  20250622_224627_8843bced378c_add_message_order_to_chat_messages.py  20250626_215407_75ab931da967_daily_limit_in_llm_calls.py  20250703_081955_fa63edde8c99_user_interactions.py  20250719_092822_fcbc311ee086_toddlers_metadata.py  32e2f7b94f0a_add_created_on_to_users_table.py  3a36c9c790b6_init_schema.py  738bd775a78f_create_users_table.py  cc2727f07a7a_add_deleted_on_to_users_table.py
app/: config.py  database.py  exceptions.py  main.py  test_litellm.py
app/data/: concepts.json  (+3 more)
tests/: conftest.py
(+61 files in other folders)
