[project]
name = "yayska"
version = "0.1.0"
description = "Yayska API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "pydantic[email]>=2.6.1",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.1",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "tqdm>=4.67.1",
    "cachetools>=5.5.0",
    "fastapi-cache2>=0.2.2",
    "python-jose[cryptography]>=3.4.0",
    "google-auth-oauthlib>=1.2.1",
    "pyjwt>=2.10.1",
    "httpx>=0.28.1",
    "anthropic>=0.55.0",
    "google-generativeai>=0.8.5",
    "pytest>=8.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]
